package cn.shui.learning_plan.offer.model;

/**
 * @author shui.
 * @date 2021/9/26.
 * @time 09:19.
 */
public class ListNode {
    public int val;
    public ListNode next;

    public ListNode(int x) {
        val = x;
    }
}
