package cn.shui.learning_plan.offer.model;

/**
 * @author shui.
 * @date 2021/9/26.
 * @time 09:35.
 */
public class Node1 {
    public int val;
    public Node1 next;
    public Node1 random;

    public Node1(int val) {
        this.val = val;
        this.next = null;
        this.random = null;
    }
}
