@startuml

title __MODEL's Class Diagram__\n

  namespace cn.shui.learning_plan.offer.model {
    class cn.shui.learning_plan.offer.model.ListNode {
        + val : int
        + ListNode()
    }
  }
  

  namespace cn.shui.learning_plan.offer.model {
    class cn.shui.learning_plan.offer.model.Node1 {
        + val : int
        + Node1()
    }
  }
  

  namespace cn.shui.learning_plan.offer.model {
    class cn.shui.learning_plan.offer.model.Node2 {
        + val : int
        + Node2()
        + Node2()
        + Node2()
    }
  }
  

  namespace cn.shui.learning_plan.offer.model {
    class cn.shui.learning_plan.offer.model.TreeNode {
        + val : int
        + TreeNode()
        + TreeNode()
        + TreeNode()
    }
  }
  

  cn.shui.learning_plan.offer.model.ListNode o-- cn.shui.learning_plan.offer.model.ListNode : next
  cn.shui.learning_plan.offer.model.Node1 o-- cn.shui.learning_plan.offer.model.Node1 : next
  cn.shui.learning_plan.offer.model.Node1 o-- cn.shui.learning_plan.offer.model.Node1 : random
  cn.shui.learning_plan.offer.model.Node2 o-- cn.shui.learning_plan.offer.model.Node2 : left
  cn.shui.learning_plan.offer.model.Node2 o-- cn.shui.learning_plan.offer.model.Node2 : right
  cn.shui.learning_plan.offer.model.TreeNode o-- cn.shui.learning_plan.offer.model.TreeNode : left
  cn.shui.learning_plan.offer.model.TreeNode o-- cn.shui.learning_plan.offer.model.TreeNode : right


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
